[package]
name = "concurrency"
version = "0.1.0"
authors = ["twenty5151 <tsuiyikching@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "1.0.1"
cmd_lib = {git = "https://github.com/rust-shell-script/rust_cmd_lib"}
